# docs/swagger.json
@@ -118,7 +118,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.VoucherRedemptionHistory"
+                                "$ref": "#/definitions/dto.VoucherRedemptionHistoryResponse"
                             }
                         }
                     },
@@ -159,7 +159,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.VoucherRedemptionHistory"
+                                "$ref": "#/definitions/dto.VoucherRedemptionHistoryResponse"
                             }
                         }
                     },
@@ -230,27 +230,22 @@
                 }
             }
         },
-        "entity.VoucherRedemptionHistory": {
+        "dto.VoucherRedemptionHistoryResponse": {
             "type": "object",
             "properties": {
                 "amount": {
-                    "description": "Amount of voucher",
                     "type": "integer"
                 },
                 "id": {
-                    "description": "Unique identifier for the redemption record",
                     "type": "integer"
                 },
-                "redeemedAt": {
-                    "description": "When the voucher was Redeemed",
+                "redeemed_at": {
                     "type": "string"
                 },
-                "userID": {
-                    "description": "ID of the user who Redeemed the voucher",
+                "user_id": {
                     "type": "string"
                 },
-                "voucherID": {
-                    "description": "ID of the Redeemed voucher",
+                "voucher_id": {
                     "type": "integer"
                 }
             }
